<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.android.generalmathquiz.MainActivity">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
        //------------------------ question 1 -----------------------
        <TextView
            style="@style/question_font"
            android:text="@string/question1" />
                    <RadioButton
                        android:text="@string/question1_A"
                        style="@style/Answer_font"
                        android:id="@+id/question1_A"
                        android:onClick="onCheckboxClicked"/>
                    <RadioButton
                        android:text="@string/question1_B"
                        style="@style/Answer_font"
                        android:id="@+id/question1_B"
                        android:onClick="onCheckboxClicked"/>
                    <RadioButton
                        android:text="@string/question1_C"
                        style="@style/Answer_font"
                        android:id="@+id/question1_C"
                        android:onClick="onCheckboxClicked"/>
        //------------------------ question 2 -----------------------
        <TextView
            style="@style/question_font"
            android:text="@string/question2"
            />
        <CheckBox
            android:text="@string/question2_A"
            style="@style/Answer_font"
            android:id="@+id/question2_A" />
        <CheckBox
            android:text="@string/question2_B"
            style="@style/Answer_font"
            android:id="@+id/question2_B" />
        <CheckBox
            android:text="@string/question2_C"
            style="@style/Answer_font"
            android:id="@+id/question2_C"/>
            //------------------------ question 3 -----------------------
                <TextView
                    style="@style/question_font"
                    android:text="@string/question3"
                    />
                <RadioButton
                    android:text="@string/question3_A"
                    style="@style/Answer_font"
                    android:id="@+id/question3_A"
                    android:onClick="onCheckboxClicked"/>
                <RadioButton
                    android:text="@string/question3_B"
                    style="@style/Answer_font"
                    android:id="@+id/question3_B"
                    android:onClick="onCheckboxClicked"/>
                <RadioButton
                    android:text="@string/question3_C"
                    style="@style/Answer_font"
                    android:id="@+id/question3_C"
                    android:onClick="onCheckboxClicked"/>
            //------------------------ question 4 -----------------------
                <TextView
                    style="@style/question_font"
                    android:text="@string/question4"
                    />
                <RadioButton
                    android:text="@string/question4_A"
                    style="@style/Answer_font"
                    android:id="@+id/question4_A"
                    android:onClick="onCheckboxClicked"/>
                <RadioButton
                    android:text="@string/question4_B"
                    style="@style/Answer_font"
                    android:id="@+id/question4_B"
                    android:onClick="onCheckboxClicked"/>
                <RadioButton
                    android:text="@string/question4_C"
                    style="@style/Answer_font"
                    android:id="@+id/question4_C"
                    android:onClick="onCheckboxClicked"/>
            //------------------------ question 5 -----------------------
                <TextView
                    style="@style/question_font"
                    android:text="@string/question5"
                    />
                <EditText
                    style="@style/Answer_font"
                    android:id="@+id/question5"/>
            <Button
                android:text="Get Result"
                android:textColor="@color/white"
                android:layout_marginTop="16dp"
                android:textAllCaps="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:layout_gravity="center"
                android:onClick="getScore"/>
            <TextView
                style="@style/question_font"
                android:textColor="@color/green"
                android:text=""
                android:id="@+id/result"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>